--- a/Day3/2_machine_learning/3_ml_in_julia.ipynb
+++ b/Day3/2_machine_learning/3_ml_in_julia.ipynb
@@ -23,9 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#56 (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dense(W, b, σ = identity) = x -> σ.(W * x .+ b)\n",
     "\n",
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Float64,1}:\n",
+       " 0.8754463570982725\n",
+       " 6.689820598949918 "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m(x)"
    ]
@@ -63,9 +87,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((f = (W = [-0.9943756641734363 -0.7264554321852847 … 0.9902804359311098 -0.9764219816644919; -0.9943756641734363 -0.7264554321852847 … 0.9902804359311098 -0.9764219816644919], b = [1.0, 1.0], σ = nothing), g = (W = [-0.013256470222723266 -0.004703684439401277 … -0.012285795091278674 -0.009904269650146834; 0.08985334383138735 0.03188192392899642 … 0.08327403539792784 0.06713187834480724; … ; 0.013515618537128547 0.004795635907136311 … 0.012525967854883273 0.010097886408011332; 0.02146570098870199 0.007616498360802444 … 0.019893923450738475 0.016037609352231724], b = [-0.029014298518512876, 0.19666107923221282, -0.1568155031808028, 0.029581493739291607, 0.0469817565257875], σ = nothing)),)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "using Zygote # source-to-source reverse mode AD\n",
     "\n",
@@ -76,31 +111,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×5 Array{Float64,2}:\n",
+       " -1.97977  2.02208  1.21005  -1.10881    -1.61574 \n",
+       " -0.19324  1.42054  0.12562   0.0174818   0.377436"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m.f.W"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×5 Array{Float64,2}:\n",
+       " -0.994376  -0.726455  -0.973175  0.99028  -0.976422\n",
+       " -0.994376  -0.726455  -0.973175  0.99028  -0.976422"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dm.f.W"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×5 Array{Float64,2}:\n",
+       " -0.133093  -0.97321  -1.24067  -0.517461   1.18785 \n",
+       " -2.41376    1.41869  -1.68311   2.00703   -0.140608"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "η = 0.01\n",
     "\n",
-    "m.f.W .-= η * dm.f.W # Gradient descent!"
+    "m.f.W .-= η * dm.f.W # Gradient descent!\n",
+    "\n",
+    "m.f.W .= m.f.W - η * dm.f.W # Gradient descent!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Float64,1}:\n",
+       " 0.787493441482203\n",
+       " 6.601867683333849"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m(x)"
    ]
   },
   {
@@ -133,18 +231,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: CuArrays.jl did not find libcudnn. Some functionality will not be available.\n",
+      "└ @ Flux C:\\Users\\carsten\\.julia\\packages\\Flux\\2i5P1\\src\\Flux.jl:58\n"
+     ]
+    }
+   ],
    "source": [
     "using Flux"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Chain(Dense(10, 5), Dense(5, 2), softmax)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m = Chain(\n",
     "    Dense(10, 5),\n",
@@ -155,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,25 +282,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loss (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "loss(x, y) = sum(Flux.mse(m(x), y)) # mean squared error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Descent(0.01)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "opt = Descent(0.01) # or ADAM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,9 +331,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Float32,1}:\n",
+       " 0.32356524\n",
+       " 0.67643476"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m(rand(10)) # trained model"
    ]
