--- a/backup/gpu/gpu.ipynb
+++ b/backup/gpu/gpu.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CuDevice(0): GeForce GT 1030"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "CuDevice(0)"
    ]
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,9 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CuArray{Float64,2,Nothing}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "typeof(Agpu)"
    ]
@@ -106,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,9 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A*B (cpu)\n",
+      "  12.731 ms (2 allocations: 7.63 MiB)\n"
+     ]
+    }
+   ],
    "source": [
     "println(\"A*B (cpu)\")\n",
     "@btime $A * $B;"
@@ -125,9 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A*B (gpu)\n",
+      "  2.933 μs (10 allocations: 416 bytes)\n"
+     ]
+    }
+   ],
    "source": [
     "println(\"A*B (gpu)\")\n",
     "@btime $Agpu * $Bgpu;"
@@ -230,18 +270,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: CuArrays.jl did not find libcudnn. Some functionality will not be available.\n",
+      "└ @ Flux C:\\Users\\carsten\\.julia\\packages\\Flux\\2i5P1\\src\\Flux.jl:58\n"
+     ]
+    }
+   ],
    "source": [
     "using Flux"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Descent(0.01)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m = Chain(\n",
     "    Dense(1000, 100),\n",
@@ -260,9 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.314975 seconds (5.02 M allocations: 110.066 MiB, 1.12% gc time)\n"
+     ]
+    }
+   ],
    "source": [
     "@time Flux.train!(loss, Flux.params(m), [(data,labels)], opt)"
    ]
@@ -276,9 +344,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1411200080598672"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sin(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1411200080598672"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 |> sin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Descent(0.01)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# move the model to the gpu\n",
     "m = Chain(\n",
@@ -299,18 +418,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Chain{Tuple{Dense{typeof(identity),CuArrays.CuArray{Float32,2,Nothing},CuArrays.CuArray{Float32,1,Nothing}},Dense{typeof(identity),CuArrays.CuArray{Float32,2,Nothing},CuArrays.CuArray{Float32,1,Nothing}},Dense{typeof(identity),CuArrays.CuArray{Float32,2,Nothing},CuArrays.CuArray{Float32,1,Nothing}},Dense{typeof(identity),CuArrays.CuArray{Float32,2,Nothing},CuArrays.CuArray{Float32,1,Nothing}},typeof(softmax)}}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "typeof(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.006236 seconds (3.80 k allocations: 167.000 KiB)\n"
+     ]
+    }
+   ],
    "source": [
     "@time Flux.train!(loss, Flux.params(m), [(data,labels)], opt)"
    ]
@@ -326,9 +464,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ArgumentError",
+     "evalue": "ArgumentError: cannot take the CPU address of a CuArrays.CuArray{Float32,2,Nothing}",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: cannot take the CPU address of a CuArrays.CuArray{Float32,2,Nothing}",
+      "",
+      "Stacktrace:",
+      " [1] unsafe_convert(::Type{Ptr{Float32}}, ::CuArrays.CuArray{Float32,2,Nothing}) at C:\\Users\\carsten\\.julia\\packages\\CuArrays\\AIMph\\src\\array.jl:211",
+      " [2] gemv!(::Char, ::Bool, ::CuArrays.CuArray{Float32,2,Nothing}, ::Array{Float32,1}, ::Bool, ::Array{Float32,1}) at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.3\\LinearAlgebra\\src\\blas.jl:587",
+      " [3] gemv!(::Array{Float32,1}, ::Char, ::CuArrays.CuArray{Float32,2,Nothing}, ::Array{Float32,1}, ::Bool, ::Bool) at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.3\\LinearAlgebra\\src\\matmul.jl:463",
+      " [4] mul! at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.3\\LinearAlgebra\\src\\matmul.jl:66 [inlined]",
+      " [5] mul! at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.3\\LinearAlgebra\\src\\matmul.jl:203 [inlined]",
+      " [6] * at D:\\buildbot\\worker\\package_win64\\build\\usr\\share\\julia\\stdlib\\v1.3\\LinearAlgebra\\src\\matmul.jl:47 [inlined]",
+      " [7] (::Dense{typeof(identity),CuArrays.CuArray{Float32,2,Nothing},CuArrays.CuArray{Float32,1,Nothing}})(::Array{Float32,1}) at C:\\Users\\carsten\\.julia\\packages\\Flux\\2i5P1\\src\\layers\\basic.jl:102",
+      " [8] Dense at C:\\Users\\carsten\\.julia\\packages\\Flux\\2i5P1\\src\\layers\\basic.jl:113 [inlined]",
+      " [9] (::Dense{typeof(identity),CuArrays.CuArray{Float32,2,Nothing},CuArrays.CuArray{Float32,1,Nothing}})(::Array{Float64,1}) at C:\\Users\\carsten\\.julia\\packages\\Flux\\2i5P1\\src\\layers\\basic.jl:116",
+      " [10] applychain at C:\\Users\\carsten\\.julia\\packages\\Flux\\2i5P1\\src\\layers\\basic.jl:30 [inlined]",
+      " [11] (::Chain{Tuple{Dense{typeof(identity),CuArrays.CuArray{Float32,2,Nothing},CuArrays.CuArray{Float32,1,Nothing}},Dense{typeof(identity),CuArrays.CuArray{Float32,2,Nothing},CuArrays.CuArray{Float32,1,Nothing}},Dense{typeof(identity),CuArrays.CuArray{Float32,2,Nothing},CuArrays.CuArray{Float32,1,Nothing}},Dense{typeof(identity),CuArrays.CuArray{Float32,2,Nothing},CuArrays.CuArray{Float32,1,Nothing}},typeof(softmax)}})(::Array{Float64,1}) at C:\\Users\\carsten\\.julia\\packages\\Flux\\2i5P1\\src\\layers\\basic.jl:32",
+      " [12] top-level scope at In[15]:1"
+     ]
+    }
+   ],
    "source": [
     "m(rand(1000))"
    ]
@@ -342,27 +503,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Chain(Dense(1000, 100), Dense(100, 10), Dense(10, 5), Dense(5, 2), softmax)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m_cpu = m |> cpu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Chain{Tuple{Dense{typeof(identity),Array{Float32,2},Array{Float32,1}},Dense{typeof(identity),Array{Float32,2},Array{Float32,1}},Dense{typeof(identity),Array{Float32,2},Array{Float32,1}},Dense{typeof(identity),Array{Float32,2},Array{Float32,1}},typeof(softmax)}}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "typeof(m_cpu)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Float32,1}:\n",
+       " 0.5463516 \n",
+       " 0.45364842"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m_cpu(rand(1000))"
    ]
